# newplat

./: Makefile
files/etc/config/: newplat
files/etc/init.d/: newplat
src/: CMakeLists.txt  encrypt.c  json.c  main.c  mqtt.c  serv_ubus.c  uci.c  utils.c
src/include/: list.h  newplat.h  uci2.h
